@@ -47,6 +47,8 @@ Changes in openair 0.8-0 [2012-11-30]
 *	Use same labelling in calendarPlot as other functions (wrong
 	month order in non-English locales)
 *	Export dendogram in corPlot - see example in help file
+*	Fix scaling bug in polarPlot when radial variable was negative
+	and small
 
 Changes in openair 0.7-0 [2012-05-30]
 =====================================
